other/concatenate-configmaps/.chainsaw-test/policy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: concatenate-configmaps
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
