other/concatenate-configmaps/concatenate-configmaps.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: concatenate-configmaps
  annotations:
    policies.kyverno.io/title: Concatenate ConfigMaps
    policies.kyverno.io/category: Other
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: ConfigMap
    kyverno.io/kyverno-version: 1.7.0
    policies.kyverno.io/minversion: 1.7.0
    kyverno.io/kubernetes-version: "1.23"
    policies.kyverno.io/description: >-
      In some cases, an update to an existing resource should have downstream effects
      on a different resource in another Namespace. Rather than overwriting the target,
      the current state of the source can be concatenated to the target.
      This policy, triggered by an update to a source ConfigMap, concatenates
      that value of a target ConfigMap in a different Namespace.
spec:
  mutateExistingOnPolicyUpdate: false
  rules:
  - name: concat-cm
    match:
      any:
      - resources:
          kinds:
          - ConfigMap
          names:
          - cmone
          namespaces:
          - foo
    mutate:
      targets:
        - apiVersion: v1
          kind: ConfigMap
          name: cmtwo
          namespace: bar
      patchStrategicMerge:
        data:
          keytwo: "{{ @ }} plus {{request.object.data.keyone}}"
