other/concatenate-configmaps/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: concatenate-configmaps
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../concatenate-configmaps.yaml
    - apply:
        file: ns.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: cm.yaml
    - assert:
        file: cm-patched.yaml
